<resources>
    <string name="app_name">Climapp</string>

    <string name="weather_api_id">c6fa2147d92527dd670150c95ae74ed4</string>
    <string name="google_maps_api_id">AIzaSyDk4KPBSpjobOrGnz76FunmH9OUEQNO55U</string>

    <string name="metric_system">metric</string>
    <string name="imperial_system">imperial</string>

    <string name="title_day_forecast">Today</string>
    <string name="title_week_forecast">Week</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="title_map_forecast">Map</string>
    <string name="refresh">Refresh</string>
    <string name="layer">Layer</string>

    <string name="clouds">Clouds</string>
    <string name="precipitation">Precipitation</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="snow">Snow</string>
    <string name="rain">Rain</string>
    <string name="tile_url">http://tile.openweathermap.org/map/%1$s/%2$d/%3$d/%4$d.png?appid=%5$s</string>
    <string name="hourly_min_max">%1$s / %2$s</string>
</resources>
